code/bluegreen/base/route-active.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: active
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: active
