code/bluegreen/base/route-preview.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: preview
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: preview
